REST plugin uses Base64 instead of DatatypeConverter
git-svn-id: svn://svn.hafro.is/jminor/trunk@8437 51816742-9f83-410d-85ed-e7bcf7042953